[gd_scene load_steps=43 format=2]

[ext_resource path="res://sprites/Game Boy Advance - Pokemon Emerald - Battle Frontier Interiors.png" type="Texture" id=1]
[ext_resource path="res://sprites/plain-black-background.jpg" type="Texture" id=2]
[ext_resource path="res://cenas/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas/Final.gd" type="Script" id=4]
[ext_resource path="res://audio/2-13 Battle Pyramid.mp3" type="AudioStream" id=5]
[ext_resource path="res://cenas/Enemy2.tscn" type="PackedScene" id=6]
[ext_resource path="res://cenas/Transition.tscn" type="PackedScene" id=7]
[ext_resource path="res://Algebrion.tres" type="Resource" id=8]
[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sprites/fund.png" type="Texture" id=10]
[ext_resource path="res://sprites/Captura de tela 2023-11-13 074220.png" type="Texture" id=11]
[ext_resource path="res://sprites/_f6cc98aa-1367-41b4-aa68-bf87d071db19-removebg-preview.png" type="Texture" id=12]
[ext_resource path="res://cenas/battle_levefinal.gd" type="Script" id=13]
[ext_resource path="res://pixel-art-rayquaza-groudon-kyogre-sprite-kyogre-et-groudon-dragon-swampert-leaf-png-clipart-removebg-preview.png" type="Texture" id=14]
[ext_resource path="res://audio/2-15-Frontier-Brain-Battle_.wav" type="AudioStream" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 68.5, 27 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.75, 23 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.5, 216.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 178.5, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20.5, 4.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 15.5, 17.125 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0, 1 )
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=9]
size = 40
extra_spacing_top = -4
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="DynamicFont" id=11]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=16]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=17]
size = 64
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EnemyContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("seta:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "enemy_damaged"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "enemy_defeated"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "mini_shake"
length = 0.5

[sub_resource type="Animation" id=22]
resource_name = "seta"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("seta:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "shake"
length = 0.5

[sub_resource type="DynamicFont" id=24]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=25]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=26]
size = 128
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=27]
size = 128
font_data = ExtResource( 9 )

[node name="Final" type="Node2D"]
script = ExtResource( 4 )

[node name="Plain-black-background" type="Sprite" parent="."]
position = Vector2( 513.5, 301.5 )
scale = Vector2( 3.86842, 4.03333 )
texture = ExtResource( 2 )

[node name="GameBoyAdvance-PokemonEmerald-BattleFrontierInteriors" type="Sprite" parent="."]
position = Vector2( 511, 296 )
scale = Vector2( 1.39108, 1.5 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 413, 347 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 608, 348 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 445.25, 291 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 576, 291 )
shape = SubResource( 2 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 444, 166 )
shape = SubResource( 2 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 372, 203 )
shape = SubResource( 2 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 511, 166 )
shape = SubResource( 2 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 584, 166 )
shape = SubResource( 2 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 647, 202 )
shape = SubResource( 2 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 336.5, 296.5 )
shape = SubResource( 3 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 684, 297 )
shape = SubResource( 3 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 509, 523 )
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 510, 488 )

[node name="Final" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Enemy2" parent="." instance=ExtResource( 6 )]
position = Vector2( 509, 182 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 510, 514 )
shape = SubResource( 5 )

[node name="Boss" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boss"]
position = Vector2( 509.5, 220.875 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Transition" parent="." instance=ExtResource( 7 )]

[node name="battle" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 13 )
enemy = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="battle"]
position = Vector2( 512, 303 )
scale = Vector2( 2.22234, 1.29694 )
texture = ExtResource( 10 )

[node name="EnemyContainer" type="VBoxContainer" parent="battle"]
margin_left = 292.0
margin_top = 52.0
margin_right = 687.0
margin_bottom = 278.0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/EnemyContainer"]
margin_top = 95.0
margin_right = 395.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 35 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="Enemy" type="Sprite" parent="battle/EnemyContainer"]
position = Vector2( 185, 232 )
scale = Vector2( 0.553169, 0.530693 )
texture = ExtResource( 14 )

[node name="PlayerPanel" type="Panel" parent="battle"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 454.0
margin_right = 984.0
margin_bottom = 561.0
custom_styles/panel = SubResource( 10 )

[node name="PlayerData" type="HBoxContainer" parent="battle/PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData"]
margin_top = 14.0
margin_right = 494.0
margin_bottom = 61.0
size_flags_horizontal = 3
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="battle/PlayerPanel/PlayerData"]
margin_left = 498.0
margin_top = 15.0
margin_right = 993.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 45 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="battle/PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = -2.0
margin_bottom = -2.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "HP: 25/50"
align = 1
valign = 1

[node name="ActionsPanel" type="Panel" parent="battle"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -21.0
margin_top = 6.0
margin_right = 1004.0
margin_bottom = 113.0
custom_styles/panel = SubResource( 10 )

[node name="Actions" type="HBoxContainer" parent="battle/ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 12
alignment = 1

[node name="Attack" type="Button" parent="battle/ActionsPanel/Actions"]
margin_right = 323.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
text = "ATAQUE"

[node name="Defend" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 335.0
margin_right = 658.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
text = "ESQUIVAR"

[node name="Run" type="Button" parent="battle/ActionsPanel/Actions"]
margin_left = 670.0
margin_right = 993.0
margin_bottom = 75.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
enabled_focus_mode = 0
text = "FUGIR"

[node name="Textbox" type="Panel" parent="battle"]
visible = false
margin_left = 6.0
margin_top = 14.0
margin_right = 1014.0
margin_bottom = 134.0
custom_styles/panel = SubResource( 15 )

[node name="Label" type="Label" parent="battle/Textbox"]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 16 )
text = "UM SLOWKING apareceu!"

[node name="ticker" type="Label" parent="battle/Textbox"]
margin_left = 975.0
margin_top = 66.0
margin_right = 999.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 17 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="battle"]
anims/RESET = SubResource( 18 )
anims/enemy_damaged = SubResource( 19 )
anims/enemy_defeated = SubResource( 20 )
anims/mini_shake = SubResource( 21 )
anims/seta = SubResource( 22 )
anims/shake = SubResource( 23 )

[node name="Options" type="Node2D" parent="battle"]

[node name="Option1" type="Sprite" parent="battle/Options"]
position = Vector2( 300, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="battle/Options/Option1"]
margin_left = -66.6667
margin_top = -49.1228
margin_right = 61.3333
margin_bottom = 44.8772
custom_fonts/font = SubResource( 24 )
text = "25"
align = 1

[node name="Option2" type="Sprite" parent="battle/Options"]
position = Vector2( 418, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="battle/Options/Option2"]
margin_left = -63.1578
margin_top = -49.1228
margin_right = 64.8422
margin_bottom = 44.8772
custom_fonts/font = SubResource( 25 )
text = "35"
align = 1

[node name="Option3" type="Sprite" parent="battle/Options"]
position = Vector2( 535, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="battle/Options/Option3"]
margin_left = -56.1404
margin_top = -49.1228
margin_right = 71.8596
margin_bottom = 44.8772
custom_fonts/font = SubResource( 26 )
text = "34"

[node name="Option4" type="Sprite" parent="battle/Options"]
position = Vector2( 655, 441 )
scale = Vector2( 0.285, 0.285 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="battle/Options/Option4"]
margin_left = -66.6667
margin_top = -45.614
margin_right = 61.3333
margin_bottom = 48.386
custom_fonts/font = SubResource( 27 )
text = "45"

[node name="seta" type="Sprite" parent="battle"]
visible = false
position = Vector2( 655, 367 )
rotation = 3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 12 )

[node name="MusicaBoss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Boss" to="." method="_on_Boss_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Attack" to="battle" method="_on_Attack_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Defend" to="battle" method="_on_Defend_pressed"]
[connection signal="pressed" from="battle/ActionsPanel/Actions/Run" to="battle" method="_on_Run_pressed"]
